add avg temp report

--- a/workflow/flows/ghcnd_gcs_bq.ipynb
+++ b/workflow/flows/ghcnd_gcs_bq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "61b19179-be73-4bb7-894b-d1e2ad81d28f",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,7 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
     "from pyspark.sql import types\n",
+    "from pyspark.sql import SQLContext\n",
     "from pyspark.conf import SparkConf\n",
     "from pyspark.context import SparkContext"
    ]
@@ -29,16 +30,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/08/16 11:29:23 WARN Utils: Your hostname, ThienLes-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 172.16.20.61 instead (on interface en0)\n",
-      "23/08/16 11:29:23 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "23/08/16 11:29:24 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/08/27 14:42:07 WARN Utils: Your hostname, ThienLes-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.1.4 instead (on interface en0)\n",
+      "23/08/27 14:42:07 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/08/27 14:42:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
     }
    ],
    "source": [
-    "credentials_location = '/Users/admin/Downloads/swift-arcadia-387709-b04513fcbebe.json'\n",
+    "credentials_location = '/Users/admin/Downloads/data-pipeline-396809-583622d42f37.json'\n",
     "\n",
     "conf = SparkConf() \\\n",
     "    .setMaster('local[*]') \\\n",
@@ -71,27 +72,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "id": "b7cfb2ac-8e26-4697-a71c-28cebbcfcc77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_VE = spark.read.parquet(\"gs://noaa_ghcn_data_lake_swift-arcadia-387709/data/pq/climate/2022/countryCode=VE/*\")"
+    "df_vm = spark.read.parquet(\"gs://noaa_ghcn_data_lake_data-pipeline-396809/data/pq/climate/2022/countryCode=VM/*\")\\\n",
+    "    .withColumn('date', F.to_date('DateStr', \"yyyyMMdd\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
+   "id": "f9e8d5cf-22c7-4a35-ab92-6cc3d2aaa335",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_station = spark.read.parquet(\"gs://noaa_ghcn_data_lake_data-pipeline-396809/data/pq/station/stations.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d2906ff1-1d2b-4f70-a924-f137060b6e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[key: string, value: string]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqlContext = SQLContext(spark.sparkContext)\n",
+    "sqlContext.sql(\"set spark.sql.caseSensitive=true\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "1a826c28-b6ca-4089-ad8e-0e94284e3cd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_VE = df_VE.withColumn('date', F.to_date('DateStr', \"yyyyMMdd\"))"
+    "df_vm = df_vm.withColumn('date', F.to_date('DateStr', \"yyyyMMdd\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
+   "id": "df328ec3-8bf9-4e20-b5f3-d7645e1abf94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_vm = df_vm \\\n",
+    "    .join(df_station, df_vm.StationId == df_station.stationId) \\\n",
+    "    .drop('stationId')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "id": "cbaacdb4-e3a7-4f46-9a14-89c1f586e1c8",
    "metadata": {},
    "outputs": [
@@ -105,48 +159,61 @@
     {
      "data": {
       "text/plain": [
-       "[Row(StationId='VE000002417', DateStr='20220101', Element='TAVG', Value=227.0, M-Flag='H', Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 1, 1)),\n",
-       " Row(StationId='VE000002417', DateStr='20220515', Element='TAVG', Value=264.0, M-Flag='H', Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 5, 15)),\n",
-       " Row(StationId='VE000005484', DateStr='20220101', Element='TMIN', Value=234.0, M-Flag=None, Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 1, 1)),\n",
-       " Row(StationId='VE000005484', DateStr='20220515', Element='TMIN', Value=248.0, M-Flag=None, Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 5, 15)),\n",
-       " Row(StationId='VE000005484', DateStr='20220101', Element='PRCP', Value=0.0, M-Flag=None, Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 1, 1))]"
+       "[Row(StationId='VM000048900', DateStr='20220330', Element='TAVG', Value=289.0, M-Flag='H', Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 3, 30)),\n",
+       " Row(StationId='VM000048900', DateStr='20220513', Element='TAVG', Value=299.0, M-Flag='H', Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 5, 13)),\n",
+       " Row(StationId='VMM00048806', DateStr='20220330', Element='TMAX', Value=265.0, M-Flag=None, Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 3, 30)),\n",
+       " Row(StationId='VMM00048806', DateStr='20220513', Element='TMAX', Value=318.0, M-Flag=None, Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 5, 13)),\n",
+       " Row(StationId='VMM00048806', DateStr='20220330', Element='TMIN', Value=180.0, M-Flag=None, Q-Flag=None, S-Flag='S', Obs-Time=None, date=datetime.date(2022, 3, 30))]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_VE.take(5)"
+    "df_vm.take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "id": "57cb7802-e235-4892-8e65-f1bfee6d3cb7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_VE.createOrReplaceTempView(\"VE\")"
+    "df_vm.createOrReplaceTempView(\"VM\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "id": "9d322ad3-e25c-4765-bed8-6860103738b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.sql(\"\"\"\n",
-    "select Element, count(*) from VE\n",
-    "group by Element\n",
+    "countryCode = \"VM\"\n",
+    "df = spark.sql(f\"\"\"\n",
+    "select \n",
+    "    StationId, \n",
+    "    Element, \n",
+    "    year(date) AS Year, \n",
+    "    name as City,\n",
+    "    AVG(Value)/10 as average_tmp,\n",
+    "    MAX(Value)/10 as max_tmp,\n",
+    "    Min(Value)/10 as min_tmp\n",
+    "from \n",
+    "    {countryCode}\n",
+    "where \n",
+    "    Element = 'TAVG'\n",
+    "group by \n",
+    "    1, 2, 3, 4\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 79,
    "id": "326db7c2-241e-44f7-86c4-12ee9efccb0a",
    "metadata": {},
    "outputs": [
@@ -160,19 +227,31 @@
     {
      "data": {
       "text/plain": [
-       "[Row(Element='TMIN', count(1)=228),\n",
-       " Row(Element='TMAX', count(1)=15),\n",
-       " Row(Element='TAVG', count(1)=3868),\n",
-       " Row(Element='PRCP', count(1)=241)]"
+       "[Row(StationId='VMM00048887', Element='TAVG', Year=2022, City='PHAN THIET', average_tmp=27.628169014084506, max_tmp=30.3, min_tmp=24.2),\n",
+       " Row(StationId='VMM00048826', Element='TAVG', Year=2022, City='PHU LIEN', average_tmp=23.69774647887324, max_tmp=31.5, min_tmp=7.4),\n",
+       " Row(StationId='VMM00048825', Element='TAVG', Year=2022, City='HA DONG', average_tmp=24.5087323943662, max_tmp=34.1, min_tmp=8.9),\n",
+       " Row(StationId='VMM00048840', Element='TAVG', Year=2022, City='THANH HOA', average_tmp=24.434084507042254, max_tmp=33.8, min_tmp=9.0),\n",
+       " Row(StationId='VMW00041010', Element='TAVG', Year=2022, City='NHA TRANG', average_tmp=27.31605633802817, max_tmp=31.2, min_tmp=23.3),\n",
+       " Row(StationId='VMM00048845', Element='TAVG', Year=2022, City='VINH', average_tmp=24.8487323943662, max_tmp=34.6, min_tmp=10.1),\n",
+       " Row(StationId='VM000048900', Element='TAVG', Year=2022, City='TAN SON HOA', average_tmp=28.247945205479454, max_tmp=31.7, min_tmp=24.9),\n",
+       " Row(StationId='VMM00048917', Element='TAVG', Year=2022, City='PHU QUOC', average_tmp=27.38876712328767, max_tmp=30.4, min_tmp=23.2),\n",
+       " Row(StationId='VMM00048820', Element='TAVG', Year=2022, City='NOIBAI INTL', average_tmp=24.284931506849315, max_tmp=34.1, min_tmp=9.1),\n",
+       " Row(StationId='VMM00048914', Element='TAVG', Year=2022, City='CA MAU', average_tmp=27.93633802816901, max_tmp=30.9, min_tmp=24.3),\n",
+       " Row(StationId='VMM00048848', Element='TAVG', Year=2022, City='DONG HOI', average_tmp=25.14, max_tmp=33.9, min_tmp=12.5),\n",
+       " Row(StationId='VMW00041011', Element='TAVG', Year=2022, City='QUI NHON', average_tmp=27.357464788732393, max_tmp=31.8, min_tmp=20.6),\n",
+       " Row(StationId='VMM00048830', Element='TAVG', Year=2022, City='LANG SON', average_tmp=21.896338028169016, max_tmp=30.4, min_tmp=5.9),\n",
+       " Row(StationId='VMM00048855', Element='TAVG', Year=2022, City='DANANG INTL', average_tmp=26.445205479452056, max_tmp=32.8, min_tmp=17.2),\n",
+       " Row(StationId='VMM00048806', Element='TAVG', Year=2022, City='SON LA', average_tmp=21.77887323943662, max_tmp=28.8, min_tmp=7.4),\n",
+       " Row(StationId='VMM00048808', Element='TAVG', Year=2022, City='CAO BANG', average_tmp=22.2343661971831, max_tmp=32.1, min_tmp=7.7)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.take(20)"
+    "df.take(100)"
    ]
   },
   {
